--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
               <button onclick="switchStream('ninja')">Ninja</button>
               <button onclick="switchStream('shroud')">Shroud</button>
             </div>
-            <iframe id="twitch-stream" src="https://embed.twitch.tv?channel=valorant&parent=omen-valorant-acc025c5b0686553fc24e7799.webflow.io&parent=persephonepunch.github.io&parent=hyperx.com&parent=localhost" allowfullscreen="" width="100%" height="680" style="border: none;">
+            <iframe id="twitch-stream" src="https://embed.twitch.tv?channel=valorant&parent=omen-valorant-acc025c5b0686553fc24e7799.webflow.io&parent=persephonepunch.github.io&parent=hyperx.com&parent=omen-micro.pages.dev&parent=localhost" allowfullscreen="" width="100%" height="680" style="border: none;">
             </iframe>
             <script>
 function switchStream(channel) {
     const iframe = document.getElementById('twitch-stream');
-    iframe.src = `https://embed.twitch.tv?channel=${channel}&parent=omen-valorant-acc025c5b0686553fc24e7799.webflow.io&parent=persephonepunch.github.io&parent=hyperx.com&parent=localhost`;
+    iframe.src = `https://embed.twitch.tv?channel=${channel}&parent=omen-valorant-acc025c5b0686553fc24e7799.webflow.io&parent=persephonepunch.github.io&parent=hyperx.com&parent=omen-micro.pages.dev&parent=localhost`;
 }
 </script>
           </div>
